--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/banana_yellow"
-    tools:context=".MainActivity">
+    tools:context=".Controller.MainActivity">
 
     <ImageView
         android:id="@+id/activity_main_face_image"
