Recycler view implementation

--- a/app/src/main/res/layout/activity_mood_history.xml
+++ b/app/src/main/res/layout/activity_mood_history.xml
@@ -7,6 +7,7 @@
     tools:context=".Controller.MoodHistoryActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/activity_mood_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </android.support.v7.widget.LinearLayoutCompat>
