--- a/app/src/main/res/layout/mood_history_row.xml
+++ b/app/src/main/res/layout/mood_history_row.xml
@@ -32,15 +32,16 @@
 
             <ImageView
                 android:id="@+id/mood_history_row_note_imageView"
-                android:layout_width="59dp"
-                android:layout_height="48dp"
+                android:layout_width="36dp"
+                android:layout_height="35dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="4dp"
                 android:layout_marginBottom="8dp"
                 android:contentDescription="@string/Comment"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="1.0"
                 app:srcCompat="@drawable/ic_comment_black_48px" />
         </android.support.constraint.ConstraintLayout>
 
