--- a/app/src/main/res/layout/mood_history_row.xml
+++ b/app/src/main/res/layout/mood_history_row.xml
@@ -4,16 +4,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="90dp">
 
     <android.support.v7.widget.CardView
         android:id="@+id/mood_history_row_cardiView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:padding="10dp"
+        app:cardBackgroundColor="@color/BackgroundHistoryMood"
         tools:layout_editor_absoluteX="384dp">
 
         <android.support.constraint.ConstraintLayout
+            android:id="@+id/mood_history_row_constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -38,6 +40,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="8dp"
                 android:contentDescription="@string/Comment"
+                android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
