--- a/app/src/main/res/layout/mood_history_row.xml
+++ b/app/src/main/res/layout/mood_history_row.xml
@@ -10,7 +10,6 @@
         android:id="@+id/mood_history_row_cardiView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
         app:cardBackgroundColor="@color/BackgroundHistoryMood"
         tools:layout_editor_absoluteX="384dp">
 
@@ -27,6 +26,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="8dp"
                 android:text="@string/Yesterday"
+                android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -34,11 +34,11 @@
 
             <ImageView
                 android:id="@+id/mood_history_row_note_imageView"
-                android:layout_width="36dp"
-                android:layout_height="35dp"
+                android:layout_width="23dp"
+                android:layout_height="26dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="2dp"
                 android:contentDescription="@string/Comment"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
