--- a/app/src/main/res/layout/alert_dialog.xml
+++ b/app/src/main/res/layout/alert_dialog.xml
@@ -19,6 +19,7 @@
         android:layout_weight="2"
         android:hint="@string/CommentHint"
         android:inputType="text"
-        android:layout_margin="10dp"/>
+        android:layout_margin="10dp"
+        android:maxLength="50"/>
 
 </android.support.v7.widget.LinearLayoutCompat>
