--- a/app/src/main/res/layout/mood_history_row.xml
+++ b/app/src/main/res/layout/mood_history_row.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="90dp">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/mood_history_row_cardiView"
