--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,6 @@
     <color name="cornflower_blue_65">#a5468ad9</color>
     <color name="light_sage">#ffb8e986</color>
     <color name="banana_yellow">#f9ec4f</color>
-    <color name="BackgroundHistoryMood">#b7b7b7</color>
+    <color name="backgroundHistoryMood">#b7b7b7</color>
 
 </resources>
