Code optimization and refactoring

--- a/app/src/main/res/layout/activity_mood_history.xml
+++ b/app/src/main/res/layout/activity_mood_history.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundHistoryMood"
+    android:background="@color/background_history_mood"
     tools:context=".Controller.MoodHistoryActivity">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_mood_recyclerView"
+        android:id="@+id/activity_mood_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
 </android.support.v7.widget.LinearLayoutCompat>
