--- a/app/src/main/res/layout/mood_history_row.xml
+++ b/app/src/main/res/layout/mood_history_row.xml
@@ -7,25 +7,25 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/mood_history_row_cardiView"
+        android:id="@+id/mood_history_row_card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/backgroundHistoryMood"
+        app:cardBackgroundColor="@color/background_history_mood"
         tools:layout_editor_absoluteX="384dp">
 
         <android.support.constraint.ConstraintLayout
-            android:id="@+id/mood_history_row_constraintLayout"
+            android:id="@+id/mood_history_row_constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/mood_history_row_title_textView"
+                android:id="@+id/mood_history_row_title_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="8dp"
-                android:text="@string/Yesterday"
+                android:text="@string/yesterday"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,12 +33,12 @@
                 app:layout_constraintVertical_bias="0.03" />
 
             <ImageView
-                android:id="@+id/mood_history_row_note_imageView"
+                android:id="@+id/mood_history_row_note_image_view"
                 android:layout_width="23dp"
                 android:layout_height="26dp"
                 android:layout_marginEnd="24dp"
                 android:layout_marginBottom="2dp"
-                android:contentDescription="@string/Comment"
+                android:contentDescription="@string/comment"
                 android:visibility="invisible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
